k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: next-k8s
  namespace: fe-experiment
  labels:
    app: next-k8s
spec:
  selector:
    app: next-k8s
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      name: http
  type: ClusterIP
